--- a/css/styles.css
+++ b/css/styles.css
@@ -2,24 +2,29 @@
     box-sizing: border-box;
 }
 
-body {
+main {
     position: fixed;
     background-color: darkgrey;
+    margin: 1% auto;
     width: 100%;
     height: 100%;
-
 }
 
-header {
-}
+header {}
 
-.board {
+#board {
+    position: relative;
     width: 90%;
     height: 90%;
     margin: 20px auto;
     padding: 0;
-    border: solid white 3px;
+    border: solid black 3px;
 }
 
-footer {
+.row {
+    display: block;
+    width: 100%;
+    height: 25%;
+    border: solid grey 2px;
 }
+    footer {}
