--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,9 @@ header {}
 
 #board {
     position: relative;
+    display: block;
     width: 90%;
-    height: 90%;
+    height: 80%;
     margin: 20px auto;
     padding: 0;
     border: solid black 3px;
@@ -27,4 +28,30 @@ header {}
     height: 25%;
     border: solid grey 2px;
 }
-    footer {}
+
+.card {
+    /* position: absolute; */
+    display: inline-block;
+    background-color: #2b2b2b;
+    width: 10%;
+    min-width: 100px;
+    height: 90%;
+    border: solid white 1px;
+}
+
+footer {
+    display: block;
+    position: fixed;
+    margin: 0 auto;
+    width: 100%;
+    height: 10%;
+    bottom: 0;
+}
+
+.button {
+    display: inline-block;
+    position: relative;
+    width: 3em;
+    height: 2em;
+    margin: 0 auto;
+}
