--- a/css/styles.css
+++ b/css/styles.css
@@ -5,28 +5,35 @@
 main {
     position: fixed;
     background-color: darkgrey;
-    margin: 1% auto;
+    margin: auto;
     width: 100%;
     height: 100%;
 }
 
-header {}
+header {
+    display: block;
+    position: relative;
+    text-align: center;
+    height: 10%;
+    top: 0;
+}
 
 #board {
     position: relative;
     display: block;
     width: 90%;
-    height: 80%;
-    margin: 20px auto;
+    height: 70%;
+    margin: auto;
+    margin-top: 4em;
     padding: 0;
-    border: solid black 3px;
+    /* border: solid black 3px; */
 }
 
 .row {
     display: block;
     width: 100%;
     height: 25%;
-    border: solid grey 2px;
+    /* border: solid grey 2px; */
 }
 
 .card {
@@ -34,24 +41,37 @@ header {}
     display: inline-block;
     background-color: #2b2b2b;
     width: 10%;
+    margin: 0 3px;
     min-width: 100px;
     height: 90%;
     border: solid white 1px;
 }
 
+.highlight {
+    border-color: red;
+}
+
 footer {
     display: block;
     position: fixed;
-    margin: 0 auto;
+    margin: auto;
     width: 100%;
     height: 10%;
     bottom: 0;
 }
 
-.button {
-    display: inline-block;
+#centerButtons {
+    margin: auto;
     position: relative;
-    width: 3em;
+    width: 25%;
+    left: 115px;
+}
+
+.button {
+    /* display: inline-block; */
+    /* position: relative; */
+    width: 4em;
     height: 2em;
-    margin: 0 auto;
+    /* margin: auto; */
+    border: solid white 1px;
 }
