--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ header {
 .card {
     /* position: absolute; */
     display: inline-block;
-    background-color: #2b2b2b;
+    /* background-color: #2b2b2b; */
     width: 10%;
     margin: 0 3px;
     min-width: 100px;
@@ -47,6 +47,13 @@ header {
     border: solid white 1px;
 }
 
+.back {
+    background-image: url(../img/binary2.jpg);
+}
+
+.front {
+    /* background-image: url(../img/androidR.png); */
+}
 .highlight {
     border-color: red;
 }
