--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,13 @@ header {
 }
 
 .card {
-    /* position: absolute; */
     display: inline-block;
-    /* background-color: #2b2b2b; */
     width: 10%;
     text-align: center;
+    /* text-indent: -9999px; */
+    font-weight: bolder;
+    color: blue;
+    font-size: 1.5em;
     margin: 0 3px;
     min-width: 100px;
     height: 90%;
@@ -83,11 +85,11 @@ header {
     background-image: url(../img/BowerR.png);
 }
 
-.c {
+.C {
     background-image: url(../img/CR.png);
 }
 
-.cplusplus {
+.Cplusplus {
     background-image: url(../img/C++R.png);
 }
 
@@ -111,7 +113,7 @@ header {
 }
 
 .css3 {
-    background-image: url(../img/css3dR.png);
+    background-image: url(../img/css3R.png);
 }
 
 .dart {
