--- a/css/styles.css
+++ b/css/styles.css
@@ -29,24 +29,19 @@ header {
     margin: auto;
     margin-top: 4em;
     padding: 0;
-    /* border: solid black 3px; */
 }
 
 .row {
     display: block;
     width: 100%;
     height: 25%;
-    /* border: solid grey 2px; */
 }
 
 .card {
     display: inline-block;
     width: 10%;
     text-align: center;
-    /* text-indent: -9999px; */
-    font-weight: bolder;
-    color: blue;
-    font-size: 1.5em;
+    text-indent: -9999px;
     margin: 0 3px;
     min-width: 100px;
     height: 90%;
@@ -226,10 +221,7 @@ footer {
 }
 
 .button {
-    /* display: inline-block; */
-    /* position: relative; */
     width: 4em;
     height: 2em;
-    /* margin: auto; */
     border: solid white 1px;
 }
