--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,12 @@ header {
     display: inline-block;
     width: 10%;
     text-align: center;
-    text-indent: -9999px;
+    /* text-indent: -9999px; */
     background-repeat: no-repeat;
     margin: 0 3px;
     min-width: 100px;
     height: 90%;
-    border: solid white 1px;
+    border: solid white 3px;
 }
 
 .back {
@@ -208,7 +208,7 @@ header {
 
 .highlight {
     border-color: cyan;
-    border-width: 2px;
+    border-width: 3px;
 }
 
 footer {
