--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     color: white;
-    font-family: helvetica;
+    font-family: 'Share Tech Mono';
     background-position: center;
 }
 
@@ -47,7 +47,7 @@ header {
     display: inline-block;
     width: 10%;
     text-align: center;
-    text-indent: -9999px;
+    /* text-indent: -9999px; */
     background-repeat: no-repeat;
     margin: 0 3px;
     min-width: 100px;
